--- a/apps/trpc-server/project.json
+++ b/apps/trpc-server/project.json
@@ -8,7 +8,7 @@
 			"executor": "nx:run-commands",
 			"options": {
 				"cwd": "apps/trpc-server",
-				"command": "cross-env NODE_ENV=development npx nest start --watch -p tsconfig.app.json"
+				"command": "cross-env NODE_ENV=development npx tsc-watch --onSuccess \"node -r tsconfig-paths/register ../../dist/apps/trpc-server/main.js\" -p tsconfig.json"
 			}
 		},
 		"build": {
@@ -43,5 +43,5 @@
 			}
 		}
 	},
-	"tags": ["nestjs-app", "trpc-server"]
+	"tags": ["trpc-server"]
 }
