--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"ts-jest": "29.1.0",
 		"ts-loader": "9.4.2",
 		"ts-node": "10.9.1",
+		"tsc-watch": "6.0.4",
 		"tsconfig-paths": "4.2.0",
 		"ttypescript": "1.5.15",
 		"typescript": "4.9.5",
