--- a/apps/trpc-server/project.json
+++ b/apps/trpc-server/project.json
@@ -17,7 +17,7 @@
 				"cwd": "apps/trpc-server",
 				"commands": [
 					"npx rimraf ../../dist/apps/trpc-server",
-					"cross-env NODE_ENV=production npx nest build -p tsconfig.build.json"
+					"cross-env NODE_ENV=production npx tsc -p tsconfig.json"
 				],
 				"parallel": false
 			},
@@ -31,8 +31,8 @@
 		"start": {
 			"executor": "nx:run-commands",
 			"options": {
-				"cwd": "dist/apps/trpc-server",
-				"command": "cross-env NODE_ENV=production node main"
+				"cwd": "apps/trpc-server",
+				"command": "cross-env NODE_ENV=production node -r tsconfig-paths/register ../../dist/apps/trpc-server/main.js"
 			}
 		},
 		"doc": {
