--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@fastify/swagger": "8.4.0",
 		"@fastify/swagger-ui": "1.8.1",
 		"@fastify/websocket": "8.0.0",
+		"@headlessui/react": "1.7.14",
 		"@hookform/resolvers": "3.1.0",
 		"@tanstack/react-query": "4.29.7",
 		"@trpc/client": "10.26.0",
@@ -40,9 +41,7 @@
 		"@ts-react/form": "1.6.4",
 		"fastify": "4.17.0",
 		"figlet": "1.6.0",
-		"flowbite": "1.6.5",
-		"flowbite-react": "0.4.4",
-		"jsonwebtoken": "9.0.0",
+		"jose": "4.14.4",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "7.43.9",
@@ -53,17 +52,19 @@
 		"trpc-playground": "1.0.4",
 		"tslib": "2.5.0",
 		"uuid-random": "1.3.2",
-		"zod": "3.21.4"
+		"zod": "3.21.4",
+		"zod-metadata": "1.1.0"
 	},
 	"devDependencies": {
 		"@nrwl/tao": "16.1.4",
 		"@nrwl/workspace": "16.1.4",
+		"@tailwindcss/forms": "0.5.3",
 		"@types/figlet": "1.5.6",
 		"@types/jest": "29.5.1",
-		"@types/jsonwebtoken": "9.0.2",
-		"@types/node": "20.1.5",
+		"@types/node": "20.1.7",
 		"@types/react": "18.2.6",
 		"@types/react-dom": "18.2.4",
+		"@types/react-table": "7.7.14",
 		"@vitejs/plugin-react": "4.0.0",
 		"autoprefixer": "10.4.14",
 		"cross-env": "7.0.3",
@@ -71,6 +72,7 @@
 		"jest": "29.5.0",
 		"nx": "16.1.4",
 		"postcss": "8.4.23",
+		"postcss-import": "15.1.0",
 		"prettier": "2.8.8",
 		"rimraf": "5.0.0",
 		"stylelint-config-recommended": "12.0.0",
@@ -83,6 +85,6 @@
 		"ttypescript": "1.5.15",
 		"typescript": "4.9.5",
 		"typescript-transform-paths": "3.4.6",
-		"vite": "4.3.6"
+		"vite": "4.3.7"
 	}
 }
