--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
 		"fastify": "4.17.0",
 		"figlet": "1.6.0",
 		"jose": "4.14.4",
+		"just-map-object": "2.3.0",
+		"just-merge": "3.2.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "7.43.9",
