login and router protection

--- a/package.json
+++ b/package.json
@@ -43,13 +43,12 @@
 		"figlet": "1.6.0",
 		"jose": "4.14.4",
 		"just-map-object": "2.3.0",
-		"just-merge": "3.2.0",
+		"just-pick": "4.2.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "7.43.9",
 		"react-router-dom": "6.11.2",
 		"react-table": "7.8.0",
-		"source-map-support": "0.5.21",
 		"trpc-openapi": "1.1.2",
 		"trpc-playground": "1.0.4",
 		"tslib": "2.5.0",
@@ -67,6 +66,7 @@
 		"@types/react": "18.2.6",
 		"@types/react-dom": "18.2.4",
 		"@types/react-table": "7.7.14",
+		"@types/source-map-support": "0.5.6",
 		"@vitejs/plugin-react": "4.0.0",
 		"autoprefixer": "10.4.14",
 		"cross-env": "7.0.3",
@@ -77,6 +77,7 @@
 		"postcss-import": "15.1.0",
 		"prettier": "2.8.8",
 		"rimraf": "5.0.0",
+		"source-map-support": "0.5.21",
 		"stylelint-config-recommended": "12.0.0",
 		"tailwindcss": "3.3.2",
 		"ts-jest": "29.1.0",
