logger, pagination and textarea

--- a/package.json
+++ b/package.json
@@ -44,9 +44,12 @@
 		"jose": "4.14.4",
 		"just-map-object": "2.3.0",
 		"just-pick": "4.2.0",
+		"pino": "^8.14.1",
+		"pino-pretty": "^10.0.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "7.43.9",
+		"react-icons": "^4.8.0",
 		"react-router-dom": "6.11.2",
 		"react-table": "7.8.0",
 		"trpc-openapi": "1.1.2",
