--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@trpc/react-query": "10.27.1",
 		"@trpc/server": "10.27.1",
 		"@ts-react/form": "1.6.4",
+		"@uiw/react-md-editor": "^3.23.0",
 		"fastify": "4.17.0",
 		"figlet": "1.6.0",
 		"jose": "4.14.4",
@@ -52,6 +53,7 @@
 		"react-icons": "^4.8.0",
 		"react-router-dom": "6.11.2",
 		"react-table": "7.8.0",
+		"rehype-sanitize": "^5.0.1",
 		"trpc-openapi": "1.1.2",
 		"trpc-playground": "1.0.4",
 		"tslib": "2.5.2",
