--- a/libs/trpc-shared/tsconfig.json
+++ b/libs/trpc-shared/tsconfig.json
@@ -6,7 +6,10 @@
 			{
 				"transform": "typescript-transform-paths"
 			}
-		]
+		],
+		"paths": {
+			"@trpc-shared/*": ["libs/trpc-shared/src/*"]
+		}
 	},
 	"exclude": ["node_modules"],
 	"include": ["**/*.ts"]
