refactor router and event in middleware

--- a/apps/trpc-server/tsconfig.app.json
+++ b/apps/trpc-server/tsconfig.app.json
@@ -3,7 +3,8 @@
 	"compilerOptions": {
 		"outDir": "../../dist/apps/trpc-server",
 		"paths": {
-			"@trpc-shared/*": ["dist/libs/trpc-shared/*"]
+			"@trpc-shared/*": ["dist/libs/trpc-shared/*"],
+			"@trpc-server/*": ["apps/trpc-server/src/*"]
 		},
 		"plugins": [
 			{
