--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.43.9",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-router-dom": "6.11.2",
     "react-table": "7.8.0",
