--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
 	"dependencies": {
 		"@fastify/cors": "8.3.0",
 		"@fastify/websocket": "8.1.0",
-		"@headlessui/react": "1.7.14",
+		"@headlessui/react": "1.7.15",
 		"@hookform/resolvers": "3.1.0",
 		"@tanstack/react-query": "4.29.12",
 		"@trpc/client": "10.28.2",
 		"@trpc/react-query": "10.28.2",
 		"@trpc/server": "10.28.2",
 		"@ts-react/form": "1.6.4",
-		"@uiw/react-md-editor": "3.23.2",
+		"@uiw/react-md-editor": "3.23.3",
 		"argon2": "^0.30.3",
 		"fastify": "4.17.0",
 		"figlet": "1.6.0",
@@ -52,6 +52,7 @@
 		"react-hook-form": "7.44.2",
 		"react-hot-toast": "^2.4.1",
 		"react-icons": "4.9.0",
+		"react-responsive-modal": "6.4.1",
 		"react-router-dom": "6.11.2",
 		"react-select": "5.7.3",
 		"react-select-async-paginate": "0.7.2",
@@ -65,8 +66,8 @@
 		"zod-metadata": "1.1.0"
 	},
 	"devDependencies": {
-		"@nrwl/tao": "16.3.0",
-		"@nrwl/workspace": "16.3.0",
+		"@nrwl/tao": "16.3.1",
+		"@nrwl/workspace": "16.3.1",
 		"@tailwindcss/forms": "0.5.3",
 		"@types/figlet": "1.5.6",
 		"@types/jest": "29.5.2",
@@ -81,7 +82,7 @@
 		"cross-env": "7.0.3",
 		"dotenv": "16.1.3",
 		"jest": "29.5.0",
-		"nx": "16.3.0",
+		"nx": "16.3.1",
 		"postcss": "8.4.24",
 		"postcss-import": "15.1.0",
 		"prettier": "2.8.8",
