--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
 		"@headlessui/react": "1.7.15",
 		"@hookform/resolvers": "3.1.0",
 		"@tanstack/react-query": "4.29.12",
-		"@trpc/client": "10.28.2",
-		"@trpc/react-query": "10.28.2",
-		"@trpc/server": "10.28.2",
+		"@tanstack/react-query-devtools": "4.29.12",
+		"@trpc/client": "10.29.1",
+		"@trpc/react-query": "10.29.1",
+		"@trpc/server": "10.29.1",
 		"@ts-react/form": "1.6.4",
 		"@uiw/react-md-editor": "3.23.3",
 		"argon2": "^0.30.3",
@@ -49,30 +50,31 @@
 		"pino-pretty": "^10.0.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-hook-form": "7.44.2",
+		"react-hook-form": "7.44.3",
 		"react-hot-toast": "^2.4.1",
 		"react-icons": "4.9.0",
 		"react-responsive-modal": "6.4.1",
-		"react-router-dom": "6.11.2",
+		"react-router-dom": "6.12.0",
 		"react-select": "5.7.3",
 		"react-select-async-paginate": "0.7.2",
 		"react-table": "7.8.0",
 		"rehype-sanitize": "^5.0.1",
 		"trpc-playground": "1.0.4",
-		"tslib": "2.5.2",
+		"ts-pattern": "4.3.0",
+		"tslib": "2.5.3",
 		"uuid-random": "1.3.2",
 		"ws": "8.13.0",
 		"zod": "3.21.4",
 		"zod-metadata": "1.1.0"
 	},
 	"devDependencies": {
-		"@nrwl/tao": "16.3.1",
-		"@nrwl/workspace": "16.3.1",
+		"@nrwl/tao": "16.3.2",
+		"@nrwl/workspace": "16.3.2",
 		"@tailwindcss/forms": "0.5.3",
 		"@types/figlet": "1.5.6",
 		"@types/jest": "29.5.2",
 		"@types/node": "20.2.5",
-		"@types/react": "18.2.7",
+		"@types/react": "18.2.8",
 		"@types/react-dom": "18.2.4",
 		"@types/react-table": "7.7.14",
 		"@types/source-map-support": "0.5.6",
@@ -80,9 +82,9 @@
 		"@vitejs/plugin-react": "4.0.0",
 		"autoprefixer": "10.4.14",
 		"cross-env": "7.0.3",
-		"dotenv": "16.1.3",
+		"dotenv": "16.1.4",
 		"jest": "29.5.0",
-		"nx": "16.3.1",
+		"nx": "16.3.2",
 		"postcss": "8.4.24",
 		"postcss-import": "15.1.0",
 		"prettier": "2.8.8",
