--- a/package.json
+++ b/package.json
@@ -31,36 +31,38 @@
 		"@fastify/cors": "8.3.0",
 		"@fastify/websocket": "8.1.0",
 		"@headlessui/react": "1.7.15",
-		"@hookform/resolvers": "3.1.0",
-		"@tanstack/react-query": "4.29.12",
-		"@tanstack/react-query-devtools": "4.29.12",
-		"@trpc/client": "10.29.1",
-		"@trpc/react-query": "10.29.1",
-		"@trpc/server": "10.29.1",
-		"@ts-react/form": "1.6.4",
+		"@hookform/resolvers": "3.1.1",
+		"@tanstack/react-query": "4.29.14",
+		"@tanstack/react-query-devtools": "4.29.14",
+		"@trpc/client": "10.31.0",
+		"@trpc/react-query": "10.31.0",
+		"@trpc/server": "10.31.0",
+		"@ts-react/form": "1.8.0",
 		"@uiw/react-md-editor": "3.23.3",
 		"argon2": "^0.30.3",
-		"fastify": "4.17.0",
+		"fastify": "4.18.0",
 		"figlet": "1.6.0",
 		"jose": "4.14.4",
 		"just-map-object": "2.3.0",
 		"just-omit": "2.2.0",
 		"just-pick": "4.2.0",
+		"mongoose": "7.3.0",
 		"pino": "^8.14.1",
 		"pino-pretty": "^10.0.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-hook-form": "7.44.3",
+		"react-hook-form": "7.45.0",
 		"react-hot-toast": "^2.4.1",
 		"react-icons": "4.9.0",
-		"react-responsive-modal": "6.4.1",
-		"react-router-dom": "6.12.0",
+		"react-responsive-modal": "6.4.2",
+		"react-router-dom": "6.13.0",
 		"react-select": "5.7.3",
 		"react-select-async-paginate": "0.7.2",
 		"react-table": "7.8.0",
 		"rehype-sanitize": "^5.0.1",
+		"trpc-panel": "1.3.4",
 		"trpc-playground": "1.0.4",
-		"ts-pattern": "4.3.0",
+		"ts-pattern": "5.0.1",
 		"tslib": "2.5.3",
 		"uuid-random": "1.3.2",
 		"ws": "8.13.0",
@@ -73,16 +75,16 @@
 		"@tailwindcss/forms": "0.5.3",
 		"@types/figlet": "1.5.6",
 		"@types/jest": "29.5.2",
-		"@types/node": "20.2.5",
-		"@types/react": "18.2.8",
-		"@types/react-dom": "18.2.4",
+		"@types/node": "20.3.1",
+		"@types/react": "18.2.13",
+		"@types/react-dom": "18.2.6",
 		"@types/react-table": "7.7.14",
 		"@types/source-map-support": "0.5.6",
-		"@types/ws": "8.5.4",
-		"@vitejs/plugin-react": "4.0.0",
+		"@types/ws": "8.5.5",
+		"@vitejs/plugin-react": "4.0.1",
 		"autoprefixer": "10.4.14",
 		"cross-env": "7.0.3",
-		"dotenv": "16.1.4",
+		"dotenv": "16.3.1",
 		"jest": "29.5.0",
 		"nx": "16.3.2",
 		"postcss": "8.4.24",
