--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
 		"@fastify/websocket": "8.1.0",
 		"@headlessui/react": "1.7.15",
 		"@hookform/resolvers": "3.1.1",
-		"@tanstack/react-query": "4.29.14",
-		"@tanstack/react-query-devtools": "4.29.14",
+		"@tanstack/react-query": "4.29.15",
+		"@tanstack/react-query-devtools": "4.29.15",
 		"@trpc/client": "10.31.0",
 		"@trpc/react-query": "10.31.0",
 		"@trpc/server": "10.31.0",
@@ -47,7 +47,7 @@
 		"just-map-object": "2.3.0",
 		"just-omit": "2.2.0",
 		"just-pick": "4.2.0",
-		"mongoose": "7.3.0",
+		"mongoose": "7.3.1",
 		"pino": "^8.14.1",
 		"pino-pretty": "^10.0.0",
 		"react": "18.2.0",
@@ -66,7 +66,6 @@
 		"ts-pattern": "5.0.1",
 		"tslib": "2.5.3",
 		"uuid-random": "1.3.2",
-		"ws": "8.13.0",
 		"zod": "3.21.4",
 		"zod-metadata": "1.1.0"
 	},
@@ -81,7 +80,6 @@
 		"@types/react-dom": "18.2.6",
 		"@types/react-table": "7.7.14",
 		"@types/source-map-support": "0.5.6",
-		"@types/ws": "8.5.5",
 		"@vitejs/plugin-react": "4.0.1",
 		"autoprefixer": "10.4.14",
 		"cross-env": "7.0.3",
@@ -98,10 +96,10 @@
 		"ts-jest": "29.1.0",
 		"ts-loader": "9.4.3",
 		"ts-node": "10.9.1",
-		"ts-patch": "^3.0.0-rc3",
+		"ts-patch": "3.0.0",
 		"tsc-watch": "6.0.4",
 		"tsconfig-paths": "4.2.0",
-		"typescript": "5.0.4",
+		"typescript": "5.1.3",
 		"typescript-transform-paths": "3.4.6",
 		"vite": "4.3.9"
 	}
