--- a/package.json
+++ b/package.json
@@ -33,30 +33,30 @@
 		"@fastify/websocket": "8.1.0",
 		"@headlessui/react": "1.7.15",
 		"@hookform/resolvers": "3.1.1",
-		"@tanstack/react-query": "4.29.15",
-		"@tanstack/react-query-devtools": "4.29.15",
-		"@trpc/client": "10.32.0",
-		"@trpc/react-query": "10.32.0",
-		"@trpc/server": "10.32.0",
+		"@tanstack/react-query": "4.29.19",
+		"@tanstack/react-query-devtools": "4.29.19",
+		"@trpc/client": "10.34.0",
+		"@trpc/react-query": "10.34.0",
+		"@trpc/server": "10.34.0",
 		"@ts-react/form": "1.8.0",
 		"@uiw/react-md-editor": "3.23.3",
 		"argon2": "^0.30.3",
-		"fastify": "4.18.0",
+		"fastify": "4.19.2",
 		"figlet": "1.6.0",
 		"jose": "4.14.4",
 		"just-map-object": "2.3.0",
 		"just-omit": "2.2.0",
 		"just-pick": "4.2.0",
-		"mongoose": "7.3.1",
+		"mongoose": "7.3.2",
 		"pino": "^8.14.1",
-		"pino-pretty": "^10.0.0",
+		"pino-pretty": "10.0.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-hook-form": "7.45.0",
+		"react-hook-form": "7.45.1",
 		"react-hot-toast": "^2.4.1",
 		"react-icons": "4.10.1",
 		"react-responsive-modal": "6.4.2",
-		"react-router-dom": "6.14.0",
+		"react-router-dom": "6.14.1",
 		"react-select": "5.7.3",
 		"react-select-async-paginate": "0.7.3",
 		"react-table": "7.8.0",
@@ -64,43 +64,43 @@
 		"trpc-panel": "1.3.4",
 		"trpc-playground": "1.0.4",
 		"ts-pattern": "5.0.1",
-		"tslib": "2.5.3",
+		"tslib": "2.6.0",
 		"uuid-random": "1.3.2",
 		"zod": "3.21.4",
 		"zod-metadata": "1.1.0"
 	},
 	"devDependencies": {
-		"@nrwl/tao": "16.4.0",
-		"@nrwl/workspace": "16.4.0",
+		"@nrwl/tao": "16.5.0",
+		"@nrwl/workspace": "16.5.0",
 		"@tailwindcss/forms": "0.5.3",
 		"@types/figlet": "1.5.6",
 		"@types/jest": "29.5.2",
-		"@types/node": "20.3.1",
+		"@types/node": "20.4.0",
 		"@types/react": "18.2.14",
 		"@types/react-dom": "18.2.6",
 		"@types/react-table": "7.7.14",
 		"@types/source-map-support": "0.5.6",
-		"@vitejs/plugin-react": "4.0.1",
+		"@vitejs/plugin-react": "4.0.2",
 		"autoprefixer": "10.4.14",
 		"cross-env": "7.0.3",
 		"dotenv": "16.3.1",
-		"jest": "29.5.0",
-		"nx": "16.4.0",
-		"postcss": "8.4.24",
+		"jest": "29.6.1",
+		"nx": "16.5.0",
+		"postcss": "8.4.25",
 		"postcss-import": "15.1.0",
-		"prettier": "2.8.8",
+		"prettier": "3.0.0",
 		"rimraf": "5.0.1",
 		"source-map-support": "0.5.21",
-		"stylelint-config-recommended": "12.0.0",
+		"stylelint-config-recommended": "13.0.0",
 		"tailwindcss": "3.3.2",
-		"ts-jest": "29.1.0",
-		"ts-loader": "9.4.3",
+		"ts-jest": "29.1.1",
+		"ts-loader": "9.4.4",
 		"ts-node": "10.9.1",
 		"ts-patch": "3.0.1",
 		"tsc-watch": "6.0.4",
 		"tsconfig-paths": "4.2.0",
-		"typescript": "5.1.3",
+		"typescript": "5.1.6",
 		"typescript-transform-paths": "3.4.6",
-		"vite": "4.3.9"
+		"vite": "4.4.1"
 	}
 }
